crates/ctt-compressonator/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

// Generated by bindgen — regenerate with `cargo xtask generate-bindings`.
//
// Source: cpp/source/cmp_core.h
#![allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    dead_code
)]

pub const CGU_ERROR_CODES_CGU_CORE_OK: CGU_ERROR_CODES = 0;
pub const CGU_ERROR_CODES_CGU_CORE_ERR_UNKOWN: CGU_ERROR_CODES = 1;
pub const CGU_ERROR_CODES_CGU_CORE_ERR_NEWMEM: CGU_ERROR_CODES = 2;
pub const CGU_ERROR_CODES_CGU_CORE_ERR_INVALIDPTR: CGU_ERROR_CODES = 3;
pub const CGU_ERROR_CODES_CGU_CORE_ERR_RANGERED: CGU_ERROR_CODES = 4;
pub const CGU_ERROR_CODES_CGU_CORE_ERR_RANGEGREEN: CGU_ERROR_CODES = 5;
pub const CGU_ERROR_CODES_CGU_CORE_ERR_RANGEBLUE: CGU_ERROR_CODES = 6;
pub type CGU_ERROR_CODES = ::std::os::raw::c_int;
unsafe extern "C" {
    pub fn CreateOptionsBC1(optionsBC1: *mut *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CreateOptionsBC2(optionsBC2: *mut *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CreateOptionsBC3(optionsBC3: *mut *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CreateOptionsBC4(optionsBC4: *mut *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CreateOptionsBC5(optionsBC5: *mut *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CreateOptionsBC6(optionsBC6: *mut *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CreateOptionsBC7(optionsBC7: *mut *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DestroyOptionsBC1(optionsBC1: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DestroyOptionsBC2(optionsBC2: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DestroyOptionsBC3(optionsBC3: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DestroyOptionsBC4(optionsBC4: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DestroyOptionsBC5(optionsBC5: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DestroyOptionsBC6(optionsBC6: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DestroyOptionsBC7(optionsBC7: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetChannelWeightsBC1(
        options: *mut ::std::os::raw::c_void,
        WeightRed: f32,
        WeightGreen: f32,
        WeightBlue: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetChannelWeightsBC2(
        options: *mut ::std::os::raw::c_void,
        WeightRed: f32,
        WeightGreen: f32,
        WeightBlue: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetChannelWeightsBC3(
        options: *mut ::std::os::raw::c_void,
        WeightRed: f32,
        WeightGreen: f32,
        WeightBlue: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetDecodeChannelMapping(
        options: *mut ::std::os::raw::c_void,
        mapRGBA: bool,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetQualityBC1(
        options: *mut ::std::os::raw::c_void,
        fquality: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetQualityBC2(
        options: *mut ::std::os::raw::c_void,
        fquality: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetQualityBC3(
        options: *mut ::std::os::raw::c_void,
        fquality: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetQualityBC4(
        options: *mut ::std::os::raw::c_void,
        fquality: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetQualityBC5(
        options: *mut ::std::os::raw::c_void,
        fquality: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetQualityBC6(
        options: *mut ::std::os::raw::c_void,
        fquality: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetQualityBC7(
        options: *mut ::std::os::raw::c_void,
        fquality: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetAlphaThresholdBC1(
        options: *mut ::std::os::raw::c_void,
        alphaThreshold: ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetRefineStepsBC1(
        options: *mut ::std::os::raw::c_void,
        steps: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetMaskBC6(
        options: *mut ::std::os::raw::c_void,
        mask: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetMaskBC7(
        options: *mut ::std::os::raw::c_void,
        mask: ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetAlphaOptionsBC7(
        options: *mut ::std::os::raw::c_void,
        imageNeedsAlpha: bool,
        colourRestrict: bool,
        alphaRestrict: bool,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetErrorThresholdBC7(
        options: *mut ::std::os::raw::c_void,
        minThreshold: f32,
        maxThreshold: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetSrgbBC1(options: *mut ::std::os::raw::c_void, sRGB: bool) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetSrgbBC2(options: *mut ::std::os::raw::c_void, sRGB: bool) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetSrgbBC3(options: *mut ::std::os::raw::c_void, sRGB: bool) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetGammaBC1(options: *mut ::std::os::raw::c_void, sRGB: bool) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetGammaBC2(options: *mut ::std::os::raw::c_void, sRGB: bool) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetGammaBC3(options: *mut ::std::os::raw::c_void, sRGB: bool) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SetSignedBC6(options: *mut ::std::os::raw::c_void, sf16: bool) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn EnableSSE4() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn EnableAVX2() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn EnableAVX512() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DisableSIMD() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn GetEnabledSIMDExtension() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CompressBlockBC1(
        srcBlock: *const ::std::os::raw::c_uchar,
        srcStrideInBytes: ::std::os::raw::c_uint,
        cmpBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CompressBlockBC2(
        srcBlock: *const ::std::os::raw::c_uchar,
        srcStrideInBytes: ::std::os::raw::c_uint,
        cmpBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CompressBlockBC3(
        srcBlock: *const ::std::os::raw::c_uchar,
        srcStrideInBytes: ::std::os::raw::c_uint,
        cmpBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CompressBlockBC7(
        srcBlock: *const ::std::os::raw::c_uchar,
        srcStrideInBytes: ::std::os::raw::c_uint,
        cmpBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DecompressBlockBC1(
        cmpBlock: *const ::std::os::raw::c_uchar,
        srcBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DecompressBlockBC2(
        cmpBlock: *const ::std::os::raw::c_uchar,
        srcBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DecompressBlockBC3(
        cmpBlock: *const ::std::os::raw::c_uchar,
        srcBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DecompressBlockBC7(
        cmpBlock: *const ::std::os::raw::c_uchar,
        srcBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CompressBlockBC4(
        srcBlock: *const ::std::os::raw::c_uchar,
        srcStrideInBytes: ::std::os::raw::c_uint,
        cmpBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DecompressBlockBC4(
        cmpBlock: *const ::std::os::raw::c_uchar,
        srcBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CompressBlockBC4S(
        srcBlock: *const ::std::os::raw::c_char,
        srcStrideInBytes: ::std::os::raw::c_uint,
        cmpBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DecompressBlockBC4S(
        cmpBlock: *const ::std::os::raw::c_uchar,
        srcBlock: *mut ::std::os::raw::c_char,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CompressBlockBC5(
        srcBlock1: *const ::std::os::raw::c_uchar,
        srcStrideInBytes1: ::std::os::raw::c_uint,
        srcBlock2: *const ::std::os::raw::c_uchar,
        srcStrideInBytes2: ::std::os::raw::c_uint,
        cmpBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DecompressBlockBC5(
        cmpBlock: *const ::std::os::raw::c_uchar,
        srcBlock1: *mut ::std::os::raw::c_uchar,
        srcBlock2: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CompressBlockBC5S(
        srcBlock1: *const ::std::os::raw::c_char,
        srcStrideInBytes1: ::std::os::raw::c_uint,
        srcBlock2: *const ::std::os::raw::c_char,
        srcStrideInBytes2: ::std::os::raw::c_uint,
        cmpBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DecompressBlockBC5S(
        cmpBlock: *const ::std::os::raw::c_uchar,
        srcBlock1: *mut ::std::os::raw::c_char,
        srcBlock2: *mut ::std::os::raw::c_char,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn CompressBlockBC6(
        srcBlock: *const ::std::os::raw::c_ushort,
        srcStrideInShorts: ::std::os::raw::c_uint,
        cmpBlock: *mut ::std::os::raw::c_uchar,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn DecompressBlockBC6(
        cmpBlock: *const ::std::os::raw::c_uchar,
        srcBlock: *mut ::std::os::raw::c_ushort,
        options: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
